<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#D7CCC8"
    tools:context=".ui.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/enter_your_name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/edt_player1"
        app:layout_constraintStart_toStartOf="@+id/edt_player1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textColor="#0000FF"
        app:layout_constraintBottom_toTopOf="@+id/edt_player2"
        app:layout_constraintStart_toStartOf="@+id/edt_player2" />

    <EditText
        android:id="@+id/edt_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edt_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_player1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boardsize"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/edt_boardSize"
        app:layout_constraintStart_toStartOf="@+id/edt_boardSize" />

    <EditText
        android:id="@+id/edt_boardSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_no_between_1_9"
        android:inputType="number"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_player2"
        app:layout_constraintStart_toStartOf="@+id/edt_player2"
        app:layout_constraintTop_toBottomOf="@+id/edt_player2" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:text="@string/start"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_boardSize" />

</androidx.constraintlayout.widget.ConstraintLayout>